# Lab2_Mult

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/lab2_mult/: __init__.py
